--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     },
     "dependencies": {
         "d3": "^7.8.5",
-        "d3-sankey": "^0.12.3"
+        "d3-geo": "^3.1.1",
+        "d3-sankey": "^0.12.3",
+        "pixi.js": "^8.15.0"
     }
 }
